package NYT.NFileClient.NProto;

////////////////////////////////////////////////////////////////////////////////

message TBlockInfo
{
    required int64 size = 1;
}

message TBlocksExt
{
    repeated TBlockInfo blocks = 1;
}

////////////////////////////////////////////////////////////////////////////////
